Add basic html and css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="container">
     <header>
       <nav class="d-flex p-2 navbar">
         <a href="Home" class="text-decoration-none text-white navbar-brand logo">Sahal's Logo</a>
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <section class="home">
+      <section class="home d-flex">
         <section class="headline">
           <h1 class="primary-text">Hey There.<br>I’m Sahal.</h1>
           <h3 class="supporting-text text-white">I’m a Software Developer</h3>
