--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
-  <body class="container">
+  <body class="">
     <header>
       <nav class="d-flex p-2 navbar">
         <a href="Home" class="text-decoration-none text-white navbar-brand logo">Sahal's Logo</a>
@@ -20,8 +20,8 @@
       </nav>
     </header>
     <main>
-      <section class="home d-flex">
-        <section class="headline">
+      <section class="home d-flex justify-content-start align-items-center">
+        <section class="headline order-2">
           <h1 class="primary-text">Hey There.<br>I’m Sahal.</h1>
           <h3 class="supporting-text text-white">I’m a Software Developer</h3>
           <p class="description text-white">
@@ -29,14 +29,116 @@
             If you like what you see and have a project you need coded, don’t hesitate to contact me.
           </p>
         </section>
-        <section class="social-media-icons">
+        <section class="social-media-icons order-1">
           <ul>
-            <li><img src="Images/github.svg" alt="github-icon"></li>
-            <li><img src="Images/Linkedin icon.svg" alt="linkedin-icon"></li>
-            <li><img src="Images/angel list.svg" alt="angel-list-icon"></li>
-            <li><img src="Images/twitter.svg" alt="twitter-icon"></li>
-            <li><img src="Images/medium.svg" alt="medium-icon"></li>
+            <li class="pb-3"><img src="Images/github.svg" alt="github-icon"></li>
+            <li class="pb-3"><img src="Images/Linkedin icon.svg" alt="linkedin-icon"></li>
+            <li class="pb-3"><img src="Images/angel list.svg" alt="angel-list-icon"></li>
+            <li class="pb-3"><img src="Images/twitter.svg" alt="twitter-icon"></li>
+            <li class="pb-3"><img src="Images/medium.svg" alt="medium-icon"></li>
           </ul>
+        </section>
+      </section>
+      <section class="works">
+        <section class="title d-flex align-items-center">
+          <h2>My Recent Works</h2>
+          <img width="794px" src="Images/Vector.svg" alt="">
+        </section>
+        <section class="card-works">
+          <section class="featured-img d-flex">
+            <img src="Images/Img Placeholder.svg" alt="image placeholder">
+            <section class="right-block px-5">
+              <h3>Multi-Post Stories</h3>
+              <p>
+                A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                This has been the industry's standard dummy text ever since the 1500s, when an unknown 
+                printer took a standard dummy text.
+              </p>
+              <ul class="list-group list-group-horizontal">
+                <li class="list-group-item">CSS</li>
+                <li class="list-group-item">HTML</li>
+                <li class="list-group-item">bootstrap</li>
+                <li class="list-group-item">Ruby</li>
+              </ul>
+              <button type="button" class="btn btn-danger">See Project</button>
+            </section>
+          </section>
+          <section class="project-list d-flex pt-3">
+            <section class="project d-flex flex-direction-column">
+              <h3>Profesional Art<br> Printing Data More</h3>
+              <p>
+                A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                Has been the industry's standard.
+              </p>
+              <ul>
+                <li>HTML</li>
+                <li>Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </section>
+            <section class="project">
+              <h3>Profesional Art<br> Printing Data More</h3>
+              <p>
+                A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                Has been the industry's standard.
+              </p>
+              <ul>
+                <li>HTML</li>
+                <li>Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </section>
+            <section class="project">
+              <h3>Profesional Art<br> Printing Data More</h3>
+              <p>
+                A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                Has been the industry's standard.
+              </p>
+              <ul>
+                <li>HTML</li>
+                <li>Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </section>
+          </section>
+          <section class="project-list d-flex">
+            <section class="project">
+              <h3>Profesional Art<br> Printing Data More</h3>
+              <p>
+                A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                Has been the industry's standard.
+              </p>
+              <ul>
+                <li>HTML</li>
+                <li>Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </section>
+            <section class="project">
+              <h3>Profesional Art<br> Printing Data More</h3>
+              <p>
+                A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                Has been the industry's standard.
+              </p>
+              <ul>
+                <li>HTML</li>
+                <li>Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </section>
+            <section class="project">
+              <h3>Profesional Art<br> Printing Data More</h3>
+              <p>
+                A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                Has been the industry's standard.
+              </p>
+              <ul>
+                <li>HTML</li>
+                <li>Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </section>
+          </section>
         </section>
       </section>
     </main>
